# neural-steering

./: .gitignore  README.md  pyproject.toml  requirements.txt
emily-notebooks/: analyze_steered_responses.ipynb  melbo.ipynb  steered_evals.ipynb  testres.pt  unsupervised_deception.ipynb
examples/: caa.ipynb  melbo copy.ipynb  melbo.ipynb  refusal_ablation.ipynb
responses/: interesting_llama3_responses.csv  llama3_aiassistant_responses_labeled.csv  llama3_aiassistant_responses_labeled_again.csv  llama3_marriage_responses_labeled.csv  llama3_marriage_responses_labeled_plussharelater.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.1_p2q1_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.1_p2q2_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.1_p4q1_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.1_p4q4_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.1_p4q4_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p2q1_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p2q1_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p2q2_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p2q2_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p4q1_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p4q1_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p4q4_t-3.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n0.5_p4q4_tNone.pt.csv  responses_vectors_spl2_oFalse_eXwifecheating_n10_p2q1_t-3.pt.csv  (+112 more)
tests/: test_masking.py  test_melbo.py
(+261 files in other folders)
